--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="row">
       <div class="column left">
-            <a href="{{ site.baseurl }}/images/screenshots/blockattack_2.1.2_vs.png"  data-lightbox="frontpage" data-title="VS Game againt the computer"><img class="frontpage_screenshot" src="{{ site.baseurl }}/images/screenshots/blockattack_2.1.2_vs.thumb.png" alt="Screenshot" border="0"/></a>
+            <a href="{{ site.baseurl }}/images/screenshots/blockattack-2.3.0-2.png"  data-lightbox="frontpage" data-title="VS Game againt the computer"><img class="frontpage_screenshot" src="{{ site.baseurl }}/images/screenshots/blockattack-2.3.0-2.thumb.png" alt="Screenshot" border="0"/></a>
       </div>
       <div class="column right">
             <p>Welcome to the Block Attack - Rise of the Blocks Homepage, another open source SDL based Tetris Attack (or Panel de Pon) Clone under the GPL</p>
